# agentic-web-hmas

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent_evaluation.py  agent_results.txt  all_run.sh  app.py  config_app.json  config_app2.json  config_app3.json  evaluation.py  llm.py  main.py  profile.py  pyproject.toml  pyrightconfig.json  run.sh  run_real.sh  scenario_evaluation.py  sem_profile.py  signifier.py  utils.py  wot_run.sh  wot_run_real.sh
a2a_sem/: a2a_interact.py  a2a_user.py  full_a2a_schema.json  simplified_a2a_schema.json
a2a_sem/formalizer/: formalizer_coala.py
llm_agent/: executor_agent.py  executor_agent2.py  web_agent.py
llm_agent/coala/: body.py  coala.py  coala_langgraph.py  pm.py
llm_agent/coala/tools/: mcp_stdio_tool.py
mcp_sem/: example_mcp.py  goal_mcp.py  mcp_client.sh  mcp_http_cli.py  mcp_interact.py  sem_mcp.py
tests/: test_a2a.py  test_artifacts_list.py  test_mcp.py  test_mcp_sem.py  test_utcp.py  test_wot.py
utcp_sem/: cherrybot_utcp_manual.json  sem_utcp.py  utcp_client.py  utcp_example.py  utcp_interact.py
wot_sem/: cherrybot_proxy.py  cherrybot_simulation.py  move10.sh  move5.sh  wot_consumer.py  wot_interact.py
wot_sem/affordances/: action_affordance.py  event_affordance.py  form.py  interaction_affordance.py  json_schema.py  property_affordance.py  thing_description.py
